--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "near-internal-demo"
+name = "flux-amm"
 version = "0.1.0"
 authors = ["jasperdg <jasperdegooijer@gmail.com>"]
 edition = "2018"
@@ -9,8 +9,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 borsh = "*"
-near-sdk = "2.0.0"
-uint = { version = "0.8.3", default-features = false }
+near-sdk = "^2.0.0"
+uint = { version = "0.8.5", default-features = false }
 wee_alloc = { version = "0.4.5", default-features = false, features = [] }
 
 [profile.release]
